fixed cube spacing problem in landscape mode

--- a/src/App.css
+++ b/src/App.css
@@ -554,8 +554,6 @@ a:hover{
   }
   
   #cube-2{
-    /* color: white;
-    background-color: rgb(79, 79, 83); */
     text-align: center;
     width: 80px;
     margin-bottom: 10vh;
@@ -622,5 +620,10 @@ a:hover{
 
   .cube-link{
     color: white;
+  }
+  @media screen and (orientation:landscape){
+    #cube-2{
+      padding-top: 60vh;
+    }
   }
 }
